--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -21,39 +21,7 @@ commands:
             sudo apt install -y python3 python3-pip
             python3 -m pip install --user ansible
 
-  destroy-environment:
-    description: Destroys back-end and front-end cloudformation stack given a workflow ID.
-    parameters:
-      workflow_id:
-        type: string  
-    steps:
-      - run:
-          name: Destroy environments
-          when: on_fail
-          command: |
-            echo "Destroying environment: << parameters.workflow_id >>"
-            aws s3 rm s3://udapeople-<<parameters.workflow_id>> --recursive
-            aws cloudformation delete-stack --stack-name udapeople-backend-<<parameters.workflow_id>>
-            aws cloudformation delete-stack --stack-name udapeople-frontend-<<parameters.workflow_id>>
-    
-  revert_migration:
-    description: Run Database Migration
-    parameters:
-      workflow_id:
-        type: string
-    steps:
-      - run:
-          name: Revert migrations
-          when: on_fail
-          command: |
-            SUCCESS=$(curl --insecure https://kvdb.io/RSyx7QjTE3q21Bx3BJkVcC/migration_${CIRCLE_WORKFLOW_ID:0:7})
-            if (($SUCCESS == 1))
-            then
-              cd ~/project/backend
-              npm install
-              npm run build
-              npm run migrations:revert
-            fi
+  
 
 jobs:
   build-frontend:
@@ -198,8 +166,8 @@ jobs:
           root: ~/
           paths:
             - project/.circleci/ansible/inventory.txt
-      - destroy-environment:
-          workflow_id: ${CIRCLE_WORKFLOW_ID:0:7}
+      #- destroy-environment:
+          #workflow_id: ${CIRCLE_WORKFLOW_ID:0:7}
       
   configure-infrastructure:
     docker:
@@ -220,8 +188,8 @@ jobs:
           command: |
               cd .circleci/ansible
               ansible-playbook -i inventory.txt  configure-server.yml
-      - destroy-environment:
-          workflow_id: ${CIRCLE_WORKFLOW_ID:0:7}
+      #- destroy-environment:
+          #workflow_id: ${CIRCLE_WORKFLOW_ID:0:7}
   
   run-migrations:
     docker:
@@ -247,8 +215,8 @@ jobs:
             else
               echo "DB migration failed"
             fi
-      - destroy-environment:
-          workflow_id: ${CIRCLE_WORKFLOW_ID:0:7}
+      #- destroy-environment:
+          #workflow_id: ${CIRCLE_WORKFLOW_ID:0:7}
 
   deploy-frontend:
     docker:
@@ -280,86 +248,9 @@ jobs:
             npm run build
             tar -czvf artifact-"${CIRCLE_WORKFLOW_ID:0:7}".tar.gz dist
             aws s3 cp dist s3://udapeople-${CIRCLE_WORKFLOW_ID:0:7} --recursive
-      - destroy-environment:
-          workflow_id: ${CIRCLE_WORKFLOW_ID:0:7}
-      - revert_migration:
-          workflow_id: ${CIRCLE_WORKFLOW_ID:0:7}
+      
   
-  deploy-backend:
-    docker:
-      - image: python:3.10-alpine3.16
-    steps:
-      - checkout
-      - add_ssh_keys:
-          fingerprints: ["07:c7:b4:df:33:69:30:b2:8c:76:23:c0:3a:21:21:08"]
-      - attach_workspace:
-          at: ~/
-      - run:
-          name: Install dependencies
-          command: |
-            apk add --update ansible
-            apk add --update --no-cache tar gzip nodejs npm aws-cli curl
-      - run:
-          name: Deploy backend
-          command: |
-            cd backend
-            npm i
-            npm run build
-            cd ..
-            # Zip the directory
-            tar -C backend -czvf artifact.tar.gz .
-            mkdir -p ~/project/.circleci/ansible/roles/deploy/files/
-            cp artifact.tar.gz .circleci/ansible/roles/deploy/files/
-            cd .circleci/ansible
-            echo "Contents  of the inventory.txt file is -------"
-            cat inventory.txt
-            ansible-playbook -i inventory.txt deploy-backend.yml
-      - destroy-environment:
-          workflow_id: ${CIRCLE_WORKFLOW_ID:0:7}
-      - revert_migration:
-          workflow_id: ${CIRCLE_WORKFLOW_ID:0:7}
-
-  smoke-test:
-    docker:
-      - image: python:3.10-alpine3.16
-    steps:
-      - checkout
-      - run:
-          name: Install dependencies
-          command: |
-            apk add --update ansible
-            apk add --update --no-cache tar gzip nodejs npm aws-cli curl          
-      - run:
-          name: Backend smoke test.
-          command: |
-            export BACKEND_IP=$(aws ec2 describe-instances \
-              --filter "Name=instance-state-name,Values=running" \
-              --query "Reservations[*].Instances[*].[PublicIpAddress]" \
-              --output text)
-            export API_URL="http://${BACKEND_IP}:3030"
-            echo "${API_URL}"
-            if curl "${API_URL}/api/status" | grep "ok"
-            then
-              return 0
-            else
-              return 1
-            fi
-      - run:
-          name: Frontend smoke test.
-          command: |
-            URL="http://udapeople-${CIRCLE_WORKFLOW_ID:0:7}.s3-website-us-east-1.amazonaws.com/#/employees"            
-            echo ${URL} 
-            if curl -s ${URL} | grep "Welcome"
-            then
-                # Change this to 0 after the job fails
-              return 1
-            else
-              return 1
-            fi
-      - destroy-environment:
-          workflow_id: ${CIRCLE_WORKFLOW_ID:0:7}
-      - revert_migration:
-          workflow_id: ${CIRCLE_WORKFLOW_ID:0:7}
+  
 
   
       
@@ -387,7 +278,7 @@ workflows:
           requires: [configure-infrastructure]
       - deploy-frontend:
           requires: [run-migrations]
-      - deploy-backend:
-          requires: [run-migrations]
-      - smoke-test:
-          requires: [deploy-backend, deploy-frontend]
+      #- deploy-backend:
+          #requires: [run-migrations]
+      #- smoke-test:
+          #requires: [deploy-backend, deploy-frontend]
