--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -378,18 +378,49 @@ jobs:
                 --no-paginate --output text)
                 curl https://kvdb.io/RSyx7QjTE3q21Bx3BJkVcC/OldWrkflwId -d "$WorkflowID"
                 echo WorkflowID: "$WorkflowID"
-      - run:
-          name: Update cloudfront distribution
-          command: |
-              aws cloudformation deploy \
-                 --template-file .circleci/files/cloudfront.yml \
-                 --stack-name InitialStack \
-                 --parameter-overrides WorkflowID="${CIRCLE_WORKFLOW_ID:0:7}" \
-                 --tags project=udapeople
+                aws cloudformation deploy \
+                  --template-file .circleci/files/cloudfront.yml \
+                  --stack-name InitialStack \
+                  --parameter-overrides WorkflowID="${CIRCLE_WORKFLOW_ID:0:7}" \
+                  --tags project=udapeople
       - destroy-environment:
           workflow_id: ${CIRCLE_WORKFLOW_ID:0:7}
       - revert_migrations:
           workflow_id: ${CIRCLE_WORKFLOW_ID:0:7}
+
+  cleanup:
+      docker:
+        - image: amazon/aws-cli
+      steps:
+        - checkout
+        - run:
+           name: Install dependencies
+           command: | 
+            apk add --update --no-cache tar gzip nodejs npm aws-cli curl
+        - attach_workspace:
+            at: ~/
+        - run:
+            name: Get WorkflowID and Clean Up
+            command: |
+              export OldWorkFlowID=$(aws cloudformation \
+                list-exports --query "Exports[?Name==\`WorkflowID\`].Value" \
+                --no-paginate --output text)
+              echo OldWorkFlowID: "${OldWorkFlowID}"
+              export CurrentWorkflowID="${CIRCLE_WORKFLOW_ID:0:7}"
+              echo CurrentWorkflowID: "${CurrentWorkflowID}"
+              export STACKS=$(aws cloudformation list-stacks --query "StackSummaries[*].StackName" \
+                --stack-status-filter CREATE_COMPLETE --no-paginate --output text)
+              echo Stack names: "${STACKS[@]}"
+              export OldWorkflowID="$WorkFlowID"
+              if [[ "$OldWorkflowID" =~ "CurrentWorkflowID"  ]]
+              then
+                echo "$OldWorkflowID" is not the same as "$WorkFlowID" deleting Old Stack
+                aws s3 rm "s3://udapeople-$OldWorkFlowID" --recursive
+                aws cloudformation delete-stack --stack-name "udapeople-backend-$OldWorkFlowID"
+                aws cloudformation delete-stack --stack-name "udapeople-frontend-$OldWorkFlowID"
+              else
+                echo "nothing to needs to be done..."
+              fi 
     
 workflows:
   project3Workflow:
@@ -421,3 +452,5 @@ workflows:
           requires: [deploy-backend, deploy-frontend]
       - cloudfront-update:
           requires: [smoke-test]
+      - cleanup:
+          requires: [cloudfront-update]
