--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -393,6 +393,9 @@ jobs:
         - image: amazon/aws-cli
       steps:
         - checkout
+        - run:
+            name: Install dependencies
+            command: yum install -y tar gzip
         - attach_workspace:
             at: ~/
         - run:
