--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -389,37 +389,35 @@ jobs:
           workflow_id: ${CIRCLE_WORKFLOW_ID:0:7}
 
   cleanup:
-      docker:
+    ddocker:
         - image: amazon/aws-cli
       steps:
         - checkout
         - run:
-            name: Install dependencies
-            command: yum install -y tar gzip
-        - attach_workspace:
-            at: ~/
-        - run:
-            name: Get WorkflowID and Clean Up
+            name: Get old stack workflow id
             command: |
               export OldWorkFlowID=$(aws cloudformation \
-                list-exports --query "Exports[?Name==\`WorkflowID\`].Value" \
-                --no-paginate --output text)
-              echo OldWorkFlowID: "${OldWorkFlowID}"
-              export CurrentWorkflowID="${CIRCLE_WORKFLOW_ID:0:7}"
-              echo CurrentWorkflowID: "${CurrentWorkflowID}"
-              export STACKS=$(aws cloudformation list-stacks --query "StackSummaries[*].StackName" \
-                --stack-status-filter CREATE_COMPLETE --no-paginate --output text)
-              echo Stack names: "${STACKS[@]}"
-              export OldWorkflowID="$WorkFlowID"
+                  list-exports --query "Exports[?Name==\`WorkflowID\`].Value" \
+                  --no-paginate --output text)
+                echo OldWorkFlowID: "${OldWorkFlowID}"
+                export CurrentWorkflowID="${CIRCLE_WORKFLOW_ID:0:7}"
+                echo CurrentWorkflowID: "${CurrentWorkflowID}"
+                export STACKS=$(aws cloudformation list-stacks --query "StackSummaries[*].StackName" \
+                  --stack-status-filter CREATE_COMPLETE --no-paginate --output text)
+                echo Stack names: "${STACKS[@]}"
+                export OldWorkflowID="$WorkFlowID"
+        - run:
+            name: Remove old stacks and files
+            command: |
               if [[ "$OldWorkflowID" =~ "CurrentWorkflowID"  ]]
-              then
-                echo "$OldWorkflowID" is not the same as "$WorkFlowID" deleting Old Stack
-                aws s3 rm "s3://udapeople-$OldWorkFlowID" --recursive
-                aws cloudformation delete-stack --stack-name "udapeople-backend-$OldWorkFlowID"
-                aws cloudformation delete-stack --stack-name "udapeople-frontend-$OldWorkFlowID"
-              else
-                echo "nothing to needs to be done..."
-              fi 
+                then
+                  echo "$OldWorkflowID" is not the same as "$WorkFlowID" deleting Old Stack
+                  aws s3 rm "s3://udapeople-$OldWorkFlowID" --recursive
+                  aws cloudformation delete-stack --stack-name "udapeople-backend-$OldWorkFlowID"
+                  aws cloudformation delete-stack --stack-name "udapeople-frontend-$OldWorkFlowID"
+                else
+                  echo "nothing to needs to be done..."
+                fi 
     
 workflows:
   project3Workflow:
