--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -327,7 +327,8 @@ jobs:
       - run:
           name: Install dependencies
           command: |
-            apk add --update ansible
+            pip install awscli
+            apk add --update ansible tar gzip nodejs nodejs-npm curl
       - run:
           name: Backend smoke test.
           command: |
