--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,26 +1,6 @@
 version: 2.1
 
 commands:
-  install_awscli:
-    description: Install AWS CLI v2
-    steps:
-    - run:
-        name: Install AWS CLI v2
-        command: |
-            curl "https://awscli.amazonaws.com/awscli-exe-linux-x86_64.zip" -o "awscliv2.zip"
-            unzip awscliv2.zip
-            sudo ./aws/install
-
-  install_ansible:
-    description: Install Ansible
-    steps:
-    - run:
-        name: Install Ansible
-        command: |
-            sudo apt update
-            sudo apt install -y python3 python3-pip
-            python3 -m pip install --user ansible
-
   revert_migrations:
     description: Revert the last migration
     parameters:
@@ -324,11 +304,13 @@ jobs:
       - image: python:3.10-alpine3.16
     steps:
       - checkout
+      - attach_workspace:
+          at: ~/
       - run:
           name: Install dependencies
           command: |
+            apk add --update --no-cache tar gzip nodejs npm curl
             pip install awscli
-            apk add --update ansible tar gzip nodejs nodejs-npm curl
       - run:
           name: Backend smoke test.
           command: |
