--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -379,22 +379,22 @@ jobs:
       - run:
           name: Get old stack workflow id
           command: |
-            export OldWorkFlowID=$(aws cloudformation \
+            export OldWorkflowID=$(aws cloudformation \
                 list-exports --query "Exports[?Name==\`WorkflowID\`].Value" \
                 --no-paginate --output text)
-              echo OldWorkFlowID: "${OldWorkFlowID}"
               export CurrentWorkflowID="${CIRCLE_WORKFLOW_ID:0:7}"
               echo CurrentWorkflowID: "${CurrentWorkflowID}"
               export STACKS=$(aws cloudformation list-stacks --query "StackSummaries[*].StackName" \
                 --stack-status-filter CREATE_COMPLETE --no-paginate --output text)
+              echo OldWorkflowID: "${OldWorkflowID}"
               echo Stack names: "${STACKS[@]}"
               export OldWorkflowID="$WorkFlowID"
       - run:
           name: Remove old stacks and files
           command: |
-            if [[ "$OldWorkflowID" =~ "CurrentWorkflowID"  ]]
+            if [[ "${STACKS[@]}" =~ "${OldWorkflowID}"  ]]
             then
-              echo "$OldWorkflowID" is not the same as "$WorkFlowID" deleting Old Stack
+              echo "$OldWorkflowID" is not the same as "$WorkflowID" deleting Old Stack
               aws s3 rm "s3://udapeople-$OldWorkFlowID" --recursive
               aws cloudformation delete-stack --stack-name "udapeople-backend-$OldWorkFlowID"
               aws cloudformation delete-stack --stack-name "udapeople-frontend-$OldWorkFlowID"
