--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -409,7 +409,7 @@ jobs:
             echo OldWorkflowID: "${OldWorkflowID}"
             echo Stack names: "${STACKS[@]}"
             export OldWorkflowID="$WorkflowID"
-            if [[ "${STACKS[@]}" =~ "${OldWorkflowID}"  ]]
+             if [[ "$CurrentWorkflowID" != "$OldWorkflowID" ]]
             then
               echo "$OldWorkflowID" is not the same as "$WorkflowID" deleting Old Stack
               aws s3 rm "s3://udapeople-$OldWorkflowID" --recursive
