--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -413,8 +413,8 @@ jobs:
             then
               echo "$OldWorkflowID" is not the same as "$WorkflowID" deleting Old Stack
               aws s3 rm "s3://udapeople-$OldWorkflowID" --recursive
-              aws cloudformation delete-stack --stack-name "udapeople-backend-$OldWorkflowID"
-              aws cloudformation delete-stack --stack-name "udapeople-frontend-$OldWorkflowID"
+              aws cloudformation delete-stack --stack-name "udapeople-backend-${OldWorkflowID}"
+              aws cloudformation delete-stack --stack-name "udapeople-frontend-${OldWorkflowID}"
             else
               echo "nothing to needs to be done..."
             fi 
