--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -412,7 +412,7 @@ jobs:
             if [[ "$OldWorkflowID" =~ "CurrentWorkflowID"  ]]
             then
               echo "$OldWorkflowID" is not the same as "$WorkflowID" deleting Old Stack
-              aws s3 rm "s3://udapeople-$OldWorkflowID" --recursive
+              aws s3 rm "s3://udapeople-${OldWorkflowID}" --recursive
               aws cloudformation delete-stack --stack-name "udapeople-backend-${OldWorkflowID}"
               aws cloudformation delete-stack --stack-name "udapeople-frontend-${OldWorkflowID}"
             else
