--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -399,25 +399,20 @@ jobs:
       - run:
           name: Remove old stacks and files
           command: |
-            export OldWorkflowID=$(aws cloudformation \
-              list-exports --query "Exports[?Name==\`WorkflowID\`].Value" \
-              --no-paginate --output text)
-            export CurrentWorkflowID="${CIRCLE_WORKFLOW_ID:0:7}"
-            echo CurrentWorkflowID: "${CurrentWorkflowID}"
-            export STACKS=$(aws cloudformation list-stacks --query "StackSummaries[*].StackName" \
-              --stack-status-filter CREATE_COMPLETE --no-paginate --output text)
+            export OldWorkflowID=$(aws cloudformation list-exports --query "Exports[?Name==\`WorkflowID\`].Value" --no-paginate --output text)
             echo OldWorkflowID: "${OldWorkflowID}"
+            echo CIRCLE_WORKFLOW_ID "${CIRCLE_WORKFLOW_ID:0:7}"
+            export STACKS=($(aws cloudformation list-stacks --query "StackSummaries[*].StackName" --stack-status-filter CREATE_COMPLETE --no-paginate --output text)) 
             echo Stack names: "${STACKS[@]}"
-            export OldWorkflowID="$WorkflowID"
             if [[ "${STACKS[@]}" =~ "${OldWorkflowID}" ]]
             then
-              echo "$OldWorkflowID" is not the same as "$WorkflowID" deleting Old Stack
+              echo "-----------------Delete Confirmed----------------"
               aws s3 rm "s3://udapeople-${OldWorkflowID}" --recursive
               aws cloudformation delete-stack --stack-name "udapeople-backend-${OldWorkflowID}"
               aws cloudformation delete-stack --stack-name "udapeople-frontend-${OldWorkflowID}"
             else
-              echo "nothing to needs to be done..."
-            fi 
+              echo "No need to clean up"
+            fi
     
 workflows:
   project3Workflow:
