--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -211,10 +211,13 @@ jobs:
       - attach_workspace:
             at: ~/
       - run:
+          command: |
+            cat ~/project/.circleci/ansible/inventory.txt
+      - run:
           name: Install dependencies
           command: | 
-            apk add --update  ansible
-            apk add --update --no-cache tar gzip nodejs npm aws-cli curl
+            apk add --update ansible tar gzip
+            pip install awscli
       - run:
           name: Configure servers
           command: |
@@ -257,7 +260,7 @@ jobs:
 
   deploy-frontend:
     docker:
-      - image: python:3.10-alpine3.16
+      - image: python:3.10-alpine3.11
     steps:
       - checkout
       - attach_workspace:
@@ -265,16 +268,14 @@ jobs:
       - run:
           name: Install dependencies
           command: |
-            apk add --update --no-cache tar gzip nodejs npm aws-cli curl
+            apk add --update nodejs nodejs-npm tar gzip curl
+            pip install awscli
       - run:
           name: Get backend url
           command: |
-            export BACKEND_IP=$(aws ec2 describe-instances \
-            --filter "Name=instance-state-name,Values=running" \
-            --query "Reservations[*].Instances[*].[PublicIpAddress]" \
-            --output text)
+            export BACKEND_IP=$(aws ec2 describe-instances --query 'Reservations[*].Instances[*].PublicIpAddress' --filters "Name=tag:project,Values=udapeople" --output text)
             export API_URL="http://${BACKEND_IP}:3030"
-            echo "${API_URL}"
+            echo "API_URL = ${API_URL}"
             echo API_URL="http://${BACKEND_IP}:3030" >> frontend/.env
             cat frontend/.env
       - run:
