--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -221,7 +221,7 @@ jobs:
       - run:
           name: Configure servers
           command: |
-            cd .circleci/ansible
+            cd ~/project/.circleci/ansible/inventory.txt
             ansible-playbook -i inventory.txt  configure-server.yml
       - destroy-environment:
           workflow_id: ${CIRCLE_WORKFLOW_ID:0:7}
