--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -23,9 +23,6 @@ commands:
 
   revert_migrations:
     description: Revert the last migration
-    parameters:
-      workflow_id:
-        type: string
     steps:
       - run:
           name: Revert migrations
@@ -58,7 +55,7 @@ commands:
 jobs:
   build-frontend:
     docker:
-      - image: cimg/node:12.16
+      - image: circleci/node:13.8.0
     steps:
       - checkout
       - restore_cache:
@@ -75,7 +72,7 @@ jobs:
 
   build-backend:
     docker:
-      - image: cimg/node:12.16
+      - image: circleci/node:13.8.0
     steps:
       - checkout
       - restore_cache:
@@ -89,146 +86,128 @@ jobs:
       - save_cache:
           paths: [backend/node_modules]
           key: backend-build
-
+    
   test-frontend:
     docker:
-      - image: cimg/node:12.16
+      - image: circleci/node:13.8.0
     steps:
       - checkout
       - restore_cache:
           keys: [frontend-build]
       - run:
-          name: Front-end test
+          name: Run frontend test
           command: |
             cd frontend
             npm install
             npm run test
-      - save_cache:
-          paths: [frontend/node_modules]
-          key: frontend-build
-
+                         
   test-backend:
     docker:
-      - image: cimg/node:12.16
+      - image: circleci/node:13.8.0
     steps:
       - checkout
       - restore_cache:
           keys: [backend-build]
       - run:
-          name: Back-end test
+          name: Run backend test
           command: |
             cd backend
             npm install
             npm run test
-      - save_cache:
-          paths: [backend/node_modules]
-          key: backend-build
-
+  
   scan-frontend:
     docker:
-      - image: cimg/node:12.16
+      - image: circleci/node:13.8.0
     steps:
       - checkout
       - restore_cache:
           keys: [frontend-build]
       - run:
-          name: Scan front-end
+          name: Scan frontend 
           command: |
             cd frontend
             npm install
-            # npm install oauth-sign@^0.9.0
             npm audit fix --audit-level=critical --force
+            # npm install oauth-sign@^0.9.0
             npm audit --audit-level=critical
-      - save_cache:
-          paths: [frontend/node_modules]
-          key: frontend-build
-
+            
   scan-backend:
     docker:
-      - image: cimg/node:12.16
+      - image: circleci/node:13.8.0
     steps:
       - checkout
       - restore_cache:
           keys: [backend-build]
       - run:
-          name: Scan Back-end
+          name: Scan backend
           command: |
             cd backend
             npm install
-            # npm install oauth-sign@^0.9.0
             npm audit fix --audit-level=critical --force
             npm audit fix --force
-            npm audit fix
+            # npm install oauth-sign@^0.9.0
             npm audit --audit-level=critical
-      - save_cache:
-          paths: [backend/node_modules]
-          key: backend-build
-
+  
   deploy-infrastructure:
     docker:
       - image: amazon/aws-cli
     steps:
       - checkout
-      - run: yum install -y tar gzip
+      - run: yum install -y gzip tar
       - run:
-          name: Ensure back-end infrastructure exists
+          name: Ensure back-end infrastructure exist
           command: |
             aws cloudformation deploy \
               --template-file .circleci/files/backend.yml \
+              --tags project=udapeople \
               --stack-name "udapeople-backend-${CIRCLE_WORKFLOW_ID:0:7}" \
-              --parameter-overrides ID="${CIRCLE_WORKFLOW_ID:0:7}"  \
-              --tags project=udapeople  
+              --parameter-overrides ID="${CIRCLE_WORKFLOW_ID:0:7}"        
       - run:
           name: Ensure front-end infrastructure exist
           command: |
             aws cloudformation deploy \
-              --template-file .circleci/files/frontend.yml \
-              --stack-name "udapeople-frontend-${CIRCLE_WORKFLOW_ID:0:7}" \
-              --parameter-overrides ID="${CIRCLE_WORKFLOW_ID:0:7}"  \
-              --tags project=udapeople
+            --template-file .circleci/files/frontend.yml \
+            --tags project=udapeople \
+            --stack-name "udapeople-frontend-${CIRCLE_WORKFLOW_ID:0:7}" \
+            --parameter-overrides ID="${CIRCLE_WORKFLOW_ID:0:7}"  
       - run:
           name: Add back-end ip to ansible inventory
           command: |
-            aws ec2 describe-instances \
-            --filter "Name=instance-state-name,Values=running" \
-            --query "Reservations[*].Instances[*].[PublicIpAddress]" \
-            --output text >> ~/project/.circleci/ansible/inventory.txt
-            cat ~/project/.circleci/ansible/inventory.txt
+            echo "[web]" > ~/project/.circleci/ansible/inventory.txt
+            aws ec2 describe-instances --query 'Reservations[*].Instances[*].PublicIpAddress' --filters "Name=tag:project,Values=udapeople" --output text >> ~/project/.circleci/ansible/inventory.txt
       - persist_to_workspace:
           root: ~/
           paths:
             - project/.circleci/ansible/inventory.txt
-      - destroy-environment:
-          workflow_id: ${CIRCLE_WORKFLOW_ID:0:7}
-      
+      - destroy-environment
+    
   configure-infrastructure:
     docker:
       - image: python:3.7-alpine3.11
     steps:
       - checkout
       - add_ssh_keys:
-          fingerprints: ["07:c7:b4:df:33:69:30:b2:8c:76:23:c0:3a:21:21:08"]
+          fingerprints: ["07:c7:b4:df:33:69:30:b2:8c:76:23:c0:3a:21:21:08"] 
       - attach_workspace:
-            at: ~/
+          at: ~/
       - run:
           command: |
             cat ~/project/.circleci/ansible/inventory.txt
       - run:
           name: Install dependencies
-          command: | 
+          command: |
             apk add --update ansible tar gzip
             pip install awscli
       - run:
-          name: Configure servers
+          name: Configure server
           command: |
-            cd ~/.circleci/ansible/inventory.txt
-            ansible-playbook -i inventory.txt  configure-server.yml
-      - destroy-environment:
-          workflow_id: ${CIRCLE_WORKFLOW_ID:0:7}
+            cd .circleci/ansible
+            ansible-playbook -i inventory.txt configure-server.yml
+      - destroy-environment
   
-  run-migrations:
+   run-migrations:
     docker:
-      - image: cimg/node:12.16
+      - image: circleci/node:13.8.0
     steps:
       - checkout
       - restore_cache:
@@ -244,32 +223,29 @@ jobs:
             cd ~/project/backend
             npm install
             npm run migrations > migrations_dump.txt
-            cat migrations_dump.txt
       - run:
           name: Send migration results to kvdb.io
-          command:  |
+          command: |
             if grep -q "has been executed successfully." ~/project/backend/migrations_dump.txt
-            then 
-              echo "DB migration was successful"
-              curl https://kvdb.io/RSyx7QjTE3q21Bx3BJkVcC/migration_${CIRCLE_WORKFLOW_ID:0:7} -d '1' --insecure
-            else
+            then
+              curl https://kvdb.io/RSyx7QjTE3q21Bx3BJkVcC/migration_${CIRCLE_WORKFLOW_ID:0:7}  -d '1' --insecure
+            fi
               echo "DB migration failed"
             fi
-      - destroy-environment:
-          workflow_id: ${CIRCLE_WORKFLOW_ID:0:7}
+      - destroy-environment
 
   deploy-frontend:
     docker:
       - image: python:3.7-alpine3.11
     steps:
       - checkout
-      - attach_workspace:
-          at: ~/
       - run:
           name: Install dependencies
           command: |
             apk add --update nodejs nodejs-npm tar gzip curl
             pip install awscli
+      - attach_workspace:
+          at: ~/
       - run:
           name: Get backend url
           command: |
@@ -285,11 +261,9 @@ jobs:
             npm install
             npm run build
             tar -czvf artifact-"${CIRCLE_WORKFLOW_ID:0:7}".tar.gz dist
-            aws s3 cp ./dist s3://udapeople-${CIRCLE_WORKFLOW_ID:0:7} --recursive
-      - destroy-environment:
-          workflow_id: ${CIRCLE_WORKFLOW_ID:0:7}
-      - revert_migrations:
-          workflow_id: ${CIRCLE_WORKFLOW_ID:0:7}
+            aws s3 cp dist s3://udapeople-${CIRCLE_WORKFLOW_ID:0:7} --recursive
+      - destroy-environment
+      - revert-migrations
 
   
     
