--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -29,12 +29,12 @@ commands:
           when: on_fail
           command: |
             SUCCESS=$(curl --insecure https://kvdb.io/RSyx7QjTE3q21Bx3BJkVcC/migration_${CIRCLE_WORKFLOW_ID:0:7})
-            if (($SUCCESS == 1))
+            if (($SUCCESS == 1));
             then
               cd ~/project/backend
               npm install
               npm run build
-              npm run migration:revert
+              npm run migrations:revert
             fi
 
   destroy-environment:
@@ -161,7 +161,8 @@ jobs:
               --template-file .circleci/files/backend.yml \
               --tags project=udapeople \
               --stack-name "udapeople-backend-${CIRCLE_WORKFLOW_ID:0:7}" \
-              --parameter-overrides ID="${CIRCLE_WORKFLOW_ID:0:7}"        
+              --parameter-overrides ID="${CIRCLE_WORKFLOW_ID:0:7}"  
+            
       - run:
           name: Ensure front-end infrastructure exist
           command: |
@@ -267,7 +268,7 @@ jobs:
             aws s3 cp dist s3://udapeople-${CIRCLE_WORKFLOW_ID:0:7} --recursive
       - destroy-environment:
           workflow_id: ${CIRCLE_WORKFLOW_ID:0:7}
-      - revert_migration:
+      - revert_migrations:
           workflow_id: ${CIRCLE_WORKFLOW_ID:0:7}
 
   
