--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -21,7 +21,7 @@ commands:
             sudo apt install -y python3 python3-pip
             python3 -m pip install --user ansible
 
-  revert_migration:
+  revert_migrations:
     description: Revert the last migration
     steps:
       - run:
@@ -161,8 +161,7 @@ jobs:
               --template-file .circleci/files/backend.yml \
               --tags project=udapeople \
               --stack-name "udapeople-backend-${CIRCLE_WORKFLOW_ID:0:7}" \
-              --parameter-overrides ID="${CIRCLE_WORKFLOW_ID:0:7}"  
-            
+              --parameter-overrides ID="${CIRCLE_WORKFLOW_ID:0:7}"      
       - run:
           name: Ensure front-end infrastructure exist
           command: |
